// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuickReply - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div
  aria-busy="false"
  class="relative flex"
  data-testid="quick-reply"
>
  <div
    class="-mt-4 w-3 shrink-0"
    data-testid="container"
  >
    <div
      data-testid="quick-reply-connector"
      height="189"
      variant="last"
    />
  </div>
  <div
    class="relative w-full cursor-pointer rounded-md border border-dashed transition-colors duration-200 p-4 border-input"
    data-testid="container"
  >
    <div
      class="gap-2"
      data-testid="container"
    >
      <div
        class="flex items-center gap-4"
        data-testid="container"
      >
        <div
          data-size="default"
          data-testid="avatar"
        />
        <div
          class="relative flex-1"
          data-testid="container"
        >
          <textarea
            aria-haspopup="listbox"
            aria-label="Reply"
            data-testid="quick-reply-textarea"
            placeholder="What are your thoughts on this?"
            rows="1"
            variant="inline"
          />
        </div>
      </div>
      <div
        attachments=""
        data-testid="post-input-attachments"
      />
      <div
        data-character-count="0"
        data-character-max="2000"
        data-disabled="false"
        data-post-disabled="true"
        data-testid="post-input-expandable-section"
      >
        <button
          data-testid="quick-reply-submit"
        >
          Submit
        </button>
        <button
          data-testid="quick-reply-image"
        >
          Image
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuickReply - Snapshots > matches snapshot with default props 1`] = `
<div
  aria-busy="false"
  class="relative flex"
  data-testid="quick-reply"
>
  <div
    class="-mt-4 w-3 shrink-0"
    data-testid="container"
  >
    <div
      data-testid="quick-reply-connector"
      height="189"
      variant="last"
    />
  </div>
  <div
    class="relative w-full cursor-pointer rounded-md border border-dashed transition-colors duration-200 p-12 border-input"
    data-testid="container"
  >
    <div
      class="gap-2"
      data-testid="container"
    >
      <div
        class="flex items-center gap-4"
        data-testid="container"
      >
        <div
          data-size="xl"
          data-testid="avatar"
        />
        <div
          class="relative flex-1"
          data-testid="container"
        >
          <textarea
            aria-haspopup="listbox"
            aria-label="Reply"
            class="text-xl leading-7"
            data-testid="quick-reply-textarea"
            placeholder="What are your thoughts on this?"
            rows="1"
            variant="inline"
          />
        </div>
      </div>
      <div
        attachments=""
        data-testid="post-input-attachments"
      />
      <div
        data-character-count="0"
        data-character-max="2000"
        data-disabled="false"
        data-post-disabled="true"
        data-testid="post-input-expandable-section"
      >
        <button
          data-testid="quick-reply-submit"
        >
          Submit
        </button>
        <button
          data-testid="quick-reply-image"
        >
          Image
        </button>
      </div>
    </div>
  </div>
</div>
`;
